--- a/index.html
+++ b/index.html
@@ -1,24 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="css/styles.css" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>welcome to Gun talk</title>
 </head>
+
 <body>
-    <div id="status-bar">
+    <div class="status-bar">
         <div class="status-bar__column">
             <span>No Service</span>
-            <!--wifi Icon-->  
+            <i class="fas fa-wifi"></i>  
         </div>
         <div class="status-bar__column">
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
             <span>110%</span>
-            <!--battery icon-->
-            <!--lightning icon-->
+            <i class="fas fa-battery-full fa-lg"></i>
+            <i class="fas fa-bolt"></i>
         </div>
     </div>
+
+    <header class="welcome-header">
+        <h1 class="welcome-header__title">Welcome to Gun talk</h1>
+        <p class="welcome-header__text">
+            If you have a Gun Account, log in with your email or phone unmber.
+        </p>
+    </header>
+
+    <form id="login-form">
+        <input type="text" placeholder="Email or phone number" />
+        <input type="password" placeholder="Password" />
+        <input type="submit" value="Log In" />
+        <a href="#">Find Gun Account or Password</a>
+    </form>
+      
+    <script src="https://kit.fontawesome.com/1e91d0bff8.js" 
+    crossorigin="anonymous">
+    </script>
+
 </body> 
 </html>
