--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span>18:43</span>
         </div>
         <div class="status-bar__column">
-            <span>110%</span>
+            <span>100%</span>
             <i class="fas fa-battery-full fa-lg"></i>
             <i class="fas fa-bolt"></i>
         </div>
@@ -26,7 +26,7 @@
     <header class="welcome-header">
         <h1 class="welcome-header__title">Welcome to Gun talk</h1>
         <p class="welcome-header__text">
-            If you have a Gun Account, log in with your email or phone unmber.
+            If you have a Gun Account, log in with your email or phone number.
         </p>
     </header>
 
