--- a/friends.html
+++ b/friends.html
@@ -23,6 +23,58 @@
         </div>
     </div>
 
+    <header class="screen-header">
+        <h1 class="screen-header__title">Friends</h1>
+        <div class="screen-header__icons">
+            <span><i class="fas fa-search fa-lg"></i></span>
+            <span><i class="fas fa-music fa-lg"></i></span>
+            <span><i class="fas fa-cog fa-lg"></i></span>
+        </div>
+
+    </header>
+
+    <a id="friends-display-link">
+       <i class="fas fa-info-circle"></i> Friends' Name Display
+       <i class="fas fa-chevron-right fa-xs"></i>
+    </a>
+
+    <main class="friends-screen">
+     <div class="user-component">
+        <div class="user-component__column">
+            <img 
+            src="screenshot/lee.jpg" 
+            class="user-component__avatar user-component__avatar--xl"/>
+            <div class="user-component__text">
+                <h4 class="user-component__title">Gun</h4>
+                <!--<h6 class="user-component__subtitle">this text whatever</h6>-->
+            </div>
+        </div>
+     </div>
+        <div class="friends-screen__channel">
+            <div class="friends-screen__channel-header">
+              <span>Channel</span>
+              <i class="fas fa-chevron-up fa-xs"></i>
+            </div>
+            <div class="user-component">
+              <div class="user-component__column">
+                <img
+                  src="screenshot/lee.jpg"
+                  class="user-component__avatar user-component__avatar--sm"
+                />
+                <div class="user-component__text">
+                  <h4 class="user-component__title">Channel</h4>
+                </div>
+              </div>
+              <div class="user-component__column">
+                <span>2</span>
+                <i class="fas fa-chevron-right fa-xs"></i>
+              </div>
+        </div>
+     </div>
+    </main>
+
+
+
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="fas fa-user fa-2x"></i></a></li class="nav__btn">
