--- a/friends.html
+++ b/friends.html
@@ -14,7 +14,7 @@
             <i class="fas fa-wifi"></i>  
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>05:16</span>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
@@ -62,7 +62,7 @@
           <div class="user-component">
               <div class="user-component__column">
                 <img
-                  src="screenshot/lee.jpg"
+                  src="screenshot/iu1.jpg"
                   class="user-component__avatar user-component__avatar--sm"
                 />
                 <div class="user-component__text">
