--- a/settings.html
+++ b/settings.html
@@ -14,7 +14,7 @@
             <i class="fas fa-wifi"></i>  
         </div>
         <div class="status-bar__column">
-            <span>18:43</span>
+            <span>05:16</span>
         </div>
         <div class="status-bar__column">
             <span>100%</span>
@@ -23,15 +23,51 @@
         </div>
     </div>
 
-    
+    <header class="alt-header">
+        <div class="alt-hader__column">
 
+        </div>
+        <div class="alt-hader__column"></div>
+        <div class="alt-hader__column"></div>
+    </header>
 
+    <header class="alt-header">
+        <div class="alt-header__column">
+            <a href="more.html">
+          <i class="fas fa-angle-left fa-3x"></i>
+        </a>
+        </div>
+        <div class="alt-header__column">
+          <h1 class="alt-header__title">Settings</h1>
+        </div>
+        <div class="alt-header__column">
+          <span><i class="fas fa-search fa-lg"></i></span>
+        </div>
+    </header>
+  
     <main class="main-screen">
-        
+        <ul class="settings-list">
+          <li class="settings__setting">
+              <div class="settings__setting-column">
+            <i class="fas fa-bullhorn"></i>
+            <span>Notices</span></div>
+            <div class="settings__setting-column"></div>
+          </li>
+          <li class="settings__setting">
+            <div class="settings__setting-column">
+            <i class="fas fa-flask"></i>
+            <span>Gun Lab</span></div>
+            <div class="settings__setting-column"></div>
+          </li>
+          <li class="settings__setting">
+            <div class="settings__setting-column">
+            <i class="fas fa-info-circle"></i>
+            <span>Version</span></div>
+            <div class="settings__setting-column">Latest Version</div>
+          </li>
+        </ul>
     </main>
-
-
-
+  
     <nav class="nav">
         <ul class="nav__list">
             <li class="nav__btn"><a class="nav__link" href="friends.html"><i class="far fa-user fa-2x"></i></a></li class="nav__btn">
