--- a/chat.html
+++ b/chat.html
@@ -72,19 +72,21 @@
     </main>
   
     <form class="reply">
-        <div class="reply__column">
-            <i class="far fa-plus-square"></i>
-
-        </div>
-        <div class="reply__column">
-            <input type="text" placeholder="Write a message..." />
-            <i class="far fa-smile-wink"></i>
-            <button>
-                <i class="fas fa-arrow-up"></i>
-            </button>
-        </div>
+      <div class="reply__column">
+        <i class="far fa-plus-square fa-lg"></i>
+      </div>
+      <div class="reply__column">
+        <input type="text" placeholder="Write a message." />
+        <i class="far fa-smile-wink fa-lg"></i>
+        <button>
+          <i class="fas fa-arrow-up"></i>
+        </button>
+      </div>
     </form>
 
+    <div id="no-mobile">
+      <span>Your screen is too big :(</span>
+   </div>
 
 
 
