--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
         <input type="submit" value="Log In" />
         <a href="#">Find Gun Account or Password</a>
     </form>
+
+    <div id="no-mobile">
+        <span>Your screen is too big :(</span>
+    </div>
+
       
     <script src="https://kit.fontawesome.com/1e91d0bff8.js" 
     crossorigin="anonymous">
